Fix label being cutoff in Newsletter registration
In this commit the label to Register in the newsletter that exists in the homepage had the text completely cut off on Tablet iOS devices

To solve this the width property was altered to use the max-content value, and a max-width property is also added. Also some paddings were set to 0 because Safari keeps adding some default padding values.

--- a/app/design/frontend/Magento/luma/Magento_Newsletter/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Newsletter/web/css/source/_module.less
@@ -46,7 +46,8 @@
         }
 
         input {
-            padding-left: 35px;
+            padding: 0 0 0 35px; // Reset some default Safari padding values.
+            margin-right: 35px;
         }
 
         .title {
@@ -78,7 +79,8 @@
 
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
     .block.newsletter {
-        width: 34%;
+        .lib-css(width, max-content);
+        max-width: 44%;
     }
 }
 
